# individualni_prace

./: CMakeLists.txt  README.md  main.cpp
